package com.pharmacy.common.enums;

public enum Role {
    CUSTOMER,
    ADMIN
}
